# whatmedoin

./: .gitignore  README.md  bun.lockb  package.json  pnpm-lock.yaml
apps/api/: .env  Dockerfile  drizzle.config.ts  package.json  server.ts
apps/api-bun/: server.ts
apps/api-go/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go  schema.sql
apps/api/drizzle/: 0000_lonely_wallop.sql
apps/api/src/: index.ts
apps/browser/: README.md  package.json  tsconfig.json
apps/browser/chrome/: background.js  background.ts  manifest.json  popup.html  popup.js  popup.ts
apps/browser/firefox/: background.js  background.ts  manifest.json  popup.html  popup.js  popup.ts  whatmedoin-0.0.1.xpi
apps/bun_c/: foreground_app_mac.c  foreground_app_win.c  index.ts
apps/cli/: Cargo.toml  package.json
apps/cli-macos/: package.json  whatmedoin.dmg
apps/cli-unix/: Cargo.toml  package.json
apps/cli-unix/src/: main.rs
apps/cli-windows/: Cargo.toml  package.json
apps/cli-windows/src/: main.rs
apps/cli/src/: main.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop_flutter/: pubspec.yaml
apps/desktop_flutter/foreground_window_title_plugin/: .metadata  README.md  pubspec.yaml
apps/desktop_flutter/lib/: foreground_window_title_plugin.dart  main.dart  window_title_plugin.dart
apps/mobile/: README.md  app.config.ts  package.json  pubspec.yaml
apps/trigger/: package.json  trigger.config.ts
apps/whatmedoin-cli-windows/: Program.cs  Worker.cs  whatmedoin-cli-windows.csproj  whatmedoin-cli-windows.sln
(+83 files in other folders)
