[package]
name = "cli-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.4"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["winbase"] }
x-win = "2.0.0"

[[bin]]
name = "wmd"
path = "src/main.rs"
