[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
x-win = "1.10.3"
serde_json = "1.0.132"
daemonize = "0.5.0"
libc = "0.2.161"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.31"

#[cfg(windows)]
windows-service = "0.7"
